# software-dev-portfolio

./: README.md
inventorize-webapp/: README.md  iniciar-inventorize.bat
inventorize-webapp/backend/: db.js  package-lock.json  package.json  server.js
inventorize-webapp/frontend/public/: index.html
sistemas-ciberfisicos-e-gemeos-digitais-industriais/: .gitignore  README.md  checklist_scgdi.md  pyproject.toml  scgdi_history.sqlite
sistemas-ciberfisicos-e-gemeos-digitais-industriais/.history/: README_20250812103452.md
sistemas-ciberfisicos-e-gemeos-digitais-industriais/scripts/: check_db.py  dev_run.sh
sistemas-ciberfisicos-e-gemeos-digitais-industriais/src/: history_mongo.py  history_sqlite.py  lds.py  model.py  publisher.py  server.py  storage.py
sistemas-ciberfisicos-e-gemeos-digitais-industriais/src/utils/: net.py
